# Scently

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml
.github/workflows/: ci.yml  go-template.yml  python-template.yml
algorithms/: go.mod
algorithms/data/: note_characteristics_filled.csv  note_tags_dataset_filled.csv  shorten-results.json
algorithms/src/: main.go
config_updater/: pyproject.toml  upload.py
config_updater/configs/: gateway.json  perfumist.json
models/: go.mod  perfume.go
parser/: main.py  perfume.py  pyproject.toml  requirements.txt
parser/canonization/: __init__.py  canonizer.py  notes_canonizer.py  type_canonizer.py
parser/data/: notes.csv
perfume/: Dockerfile  go.mod
perfumist/: Dockerfile  go.mod
services/ai_advisor/: Dockerfile  pyproject.toml  requirements.txt
services/ai_advisor/src/: main.py
services/ai_advisor/src/api/: advisor.py
services/ai_advisor/src/models/: perfume.py
services/parser/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/parser/canonization/: __init__.py  canonizer.py  notes_canonizer.py
services/parser/data/dataset/: note_characteristics_dataset.csv  note_tags_dataset.csv
services/parser/data/notes/: animals.csv  flowers.csv  naturals.csv  resins.csv
services/parser/data/types/: types.csv
services/parser/models/: __init__.py  perfume.py
services/parser/scraping/: __init__.py  page_parser.py  scrapper.py
services/parser/scraping/gold_apple/: __init__.py  gold_apple_parser.py  gold_apple_scrapper.py  scrapper.py
services/parser/scraping/letu/: __init__.py  letu_parser.py  letu_scrapper.py
services/parser/scraping/randewoo/: __init__.py  randewoo_parser.py  randewoo_scrapper.py
services/parser/src/: main.py
services/parser/src/app/: __init__.py  unite.py
services/parser/src/canonization/: canonizer.py  notes_canonizer.py
services/parser/src/models/: __init__.py  perfume.py  perfume_key.py  perfume_with_united_shops.py
services/parser/src/scraping/: page_parser.py  scrapper.py
services/parser/src/scraping/gold_apple/: gold_apple_parser.py  gold_apple_scrapper.py
services/parser/src/scraping/letu/: letu_parser.py  letu_scrapper.py
services/parser/src/scraping/randewoo/: randewoo_parser.py  randewoo_scrapper.py
services/parser/src/util/: __init__.py  backup.py  collect_perfumes.py  logging.py  send_request.py
services/parser/util/: concat_perfumes.py  send_request.py
(+434 files in other folders)
