[project]
name = "parser"
version = "0.1.0"
description = "Perfume collector"
requires-python = ">=3.13"

# Runtime dependencies
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "playwright>=1.55.0",
    "requests>=2.31",
    "tqdm>=4.67.1",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
    "webdriver-manager>=4.0.2",
]

[tool.uv]
# Development-only dependencies
dev-dependencies = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "types-requests>=2.31.0",
    "types-tqdm>=4.67.0",
]

[tool.ruff]
line-length = 88
lint.select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["httpx", "playwright.*"]
ignore_missing_imports = true
